app/assets/stylesheets/zammad.scss
/* ... */
.searchableSelect {
  position: relative;
  
  .form-control {
    padding-right: 37px;
  }

  .searchableSelect-main {
    position: relative;
  }
  
  .searchableSelect-shadow {
    display: none;
  }

  .dropdown-menu {
    margin-top: -3px;
  }
  
  &.dropdown li:hover:not(.is-active) {
    background: none;
  }

  &.dropdown li.is-hidden {
    display: none;
  }

  li:not(.is-active):hover + li {
    box-shadow: 0 1px rgba(255,255,255,.13) inset;
  }

  .searchableSelect-autocomplete {
    position: absolute;
    left: 13px;
    top: 10px;
    right: 37px;
    white-space: nowrap;
    overflow: hidden;
    display: flex;
    pointer-events: none;
    white-space: pre;
  }

  .searchableSelect-autocomplete-invisible {
    color: transparent;
  }

  .searchableSelect-autocomplete-visible {
    color: hsl(0,0%,33%);
    background: hsl(201,61%,90%);
  }

  .loading.icon {
    position: absolute;
    right: 11px;
    top: 11px;
    display: none;
  }

  &.is-loading {
    .loading.icon {
      display: block;
    }
    .icon-arrow-down {
      display: none;
    }
  }
}

.action {
  background: white;
  border: 1px solid hsl(199,44%,93%);
  color: hsl(206,7%,28%);
  box-shadow: 0 2px hsl(210,7%,94%);
  display: flex;
  flex-wrap: wrap;
  padding: 10px;
  margin-bottom: 17px;

  &.is-inactive {
    background: none;
    box-shadow: none;
    position: relative;
    top: 2px;
    border-color: hsl(199,44%,94%);

    & > *:not(.action-controls) {
      opacity: 0.33;
    }
  }

  .action-flow {
    display: flex;
    flex-wrap: wrap;
    
    &.action-flow--noWrap {
      flex-wrap: nowrap;
    }
    
    &.action-flow--row {
      flex-basis: 100%;
    }
  }

  .action-separator {
    width: 1px;
    background: hsl(0,0%,97%);
    margin: 0 10px;
  }

  .table {
    margin-left: -9px;
    margin-right: -9px;
  }
  
  h2, h3 {
    margin-bottom: 0;
  }

  .action-block,
  .action-controls,
  .action-row {
    padding: 10px;
    
    h2:first-child,
    h3:first-child {
      margin-top: 0;
    }
  }

  .action-block {
    &.action-block--flex {
      flex: 1;
    }
  }

  .action-row {
    flex-basis: 100%;
  }
  
  h3 {
    color: hsl(0,0%,60%);
    margin-top: 0;
  }

  .action-label {
    margin-left: auto;
    background: hsl(197,20%,93%);
    border: 1px solid hsl(197,20%,88%);
    align-self: flex-start;
    padding: 5px 10px;
    margin-right: -25px;
    margin-top: -4px;
    margin-bottom: -5px;
    color: hsl(197,16%,65%);
    cursor: default;
  }
    
  .action-flow-icon {
    align-self: center;
    width: 15px;
    height: 24px;
    margin-top: 20px; /* compensate for h3 height */
    margin-left: 20px;
    margin-right: 20px;
    fill: hsl(198,17%,89%);
  }

  .action-controls {
    display: flex;
    margin-left: auto;
    align-self: flex-end;
    
    .btn {
      align-self: center;
    }
  }
}

.datepicker {
  background: hsl(234,10%,19%);
  color: white;
  padding: 0 14px 11px;
  position: absolute;
  left: 0 !important;
  top: 41px !important;
  min-width: 0;
  cursor: default;
  
  .datepicker-switch {
    padding: 12px 0;
    font-size: 15px;
    text-align: center;
    cursor: pointer;
    
    &:hover {
      background: hsl(240,10%,14%);
    }
  }

  .next,
  .prev {
    cursor: pointer;
    padding: 12px 9px 0;
    vertical-align: top;
    text-align: center;
    
    .icon {
      margin-top: 4px;
      fill: white;
      opacity: 1;
    }
    
    &:hover {
      background: hsl(240,10%,14%);
    }
  }
  
  .dow {
    text-transform: uppercase;
    font-size: 12px;
    padding: 20px 5px 0;
    text-align: center;
  }

  .day {
    width: 27px;
    height: 27px;
    border-radius: 100%;
    padding: 0;
  }

  .month,
  .year {
    float: left;
    width: 23%;
    margin: 1%;
    padding: 5px 0;
  }
  
  .day, .month, .year {
    text-align: center;
    font-size: 15px;
    
    &:not(.disabled) {
      cursor: pointer;
    }
    
    &.disabled,
    &.old,
    &.new {
      color: hsl(0,0%,33%);
    }

    &.today {
      background: hsl(240,10%,14%);
    }

    &.focused {
      box-shadow: 0 0 0 1px hsl(207,82%,64%) inset;
    }

    &.active {
      color: white;
      background: hsl(207,82%,64%);
    }
  }

  .today {
    text-align: center;
    padding: 0;
    cursor: pointer;
    
    &.hidden {
      display: none;
    }
  }
}

#notify {
  position: absolute;
  top: 10px;
  left: 0;
  right: 0;
  @extend .zIndex-10;
  
  .defaultTheme {
    pointer-events: none;
  }
  
  .noty_bar {
    max-width: 500px;
    text-align: center;
    margin: 0 auto 10px;

    .noty_message {
      pointer-events: auto;
      display: inline-block;
      background: hsl(203,65%,55%);
      padding: 10px 15px 8px;
      border-radius: 3px;
      color: white;
    }

    &.noty_type_success .noty_message {
      background: hsl(145,51%,45%);
    }

    &.noty_type_alert .noty_message {
      color: hsl(45,98%,17%);
      background: hsl(45,98%,63%);
    }

    &.noty_type_error .noty_message {
      background: hsl(11,85%,48%);
    }

    a {
      color: inherit;
      text-decoration: none;
    }
  }
}

.animated {
  animation-duration: 300ms;
  animation-fill-mode: both;
}

.fadeInDown {
  animation-name: fadeInDown;
}

@keyframes fadeInDown {
  from {
    opacity: 0;
    transform: translate3d(0, -50%, 0);
  }

  to {
    opacity: 1;
    transform: none;
  }
}

.fadeOutDown {
  animation-name: fadeOutDown;
}

@keyframes fadeOutDown {
  from {
    opacity: 1;
  }

  to {
    opacity: 0;
    transform: translate3d(0, 50%, 0);
  }
}

.loading-placeholder {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 133px;
  
  .loading-text {
    margin-left: 10px;
  }
}

/*

  ----------------
   normal screens
  ----------------

*/

@media only screen and (max-width: 1280px) {
  .sidebar.optional {
    display: none;
  }
}



/*

  ----------------
   layout classes
  ----------------

*/

.horizontal, 
.vertical, 
.centered {
  display: flex;
}
/* ... */

